--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,7 @@
 
 body {
   display: flex;
-  background-color: #57407c;
+  background-color: #60399e;
   flex-direction: column;
   justify-content: center;
   align-content: center;
