--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,7 @@
 
 body {
   display: flex;
-  background-color: #60399e;
+  background-color: #D3756B;
   flex-direction: column;
   justify-content: center;
   align-content: center;
@@ -26,7 +26,7 @@ body {
   width: 440px;
   height: 440px;
   padding: 5px;
-  background-color: #57407c;
+  background-color: #1F8A70;
   border-radius: 7px;
   outline: none;
   position: relative;
