bg-color updated

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,7 @@
 
 body {
   display: flex;
-  background-color: #D3756B;
+  background-color: #03C988;
   flex-direction: column;
   justify-content: center;
   align-content: center;
